crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__functions_call_as_statement.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: call_as_statement.cm
============================================================
Source code:
//!ASSERT CONTAINS: call 0()
//!ASSERT NOT_CONTAINS: %

// Tests a function call used as a statement, where the return value is ignored.
// This should generate a `VoidCall` instruction.
func helper() -> felt { return 123; }

func main() -> felt {
    helper(); // Call in statement context
    return 0;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn helper {
    entry: 0

    0:
      return 123

  }

  // Function 1
  fn main {
    entry: 0

    0:
      call 0()
      return 0

  }

}
