crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__functions_call_with_return.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: call_with_return.cm
============================================================
Source code:
//!ASSERT CONTAINS: %0 = call 0()

// Tests a function call where the return value is assigned to a variable.
// This should generate a `Call` instruction.
func helper() -> felt { return 123; }

func main() -> felt {
    let x = helper();
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn helper {
    entry: 0

    0:
      return 123

  }

  // Function 1
  fn main {
    entry: 0

    0:
      %0 = call 0()
      %1 = stackalloc 1
      store %1, %0
      return %1

  }

}
