crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__functions_fib_loop.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: fib_loop.cm
============================================================
Source code:
func fibonacci_loop(n: felt) -> felt {
    let a = 0;
    let b = 1;
    let i = 0;
    while (i != n) {
        let temp = a;
        a = b;
        b = b + temp;
        i = i + 1;
    }
    return a;
}

func main() -> felt {
    let n = 10;
    let result = fibonacci_loop(n);
    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn fibonacci_loop {
    parameters: [0]
    entry: 0

    0:
      %1 = stackalloc 1
      store %1, 0
      %2 = stackalloc 1
      store %2, 1
      %3 = stackalloc 1
      store %3, 0
      jump 1

    1:
      if %3 Neq %0 then jump 2 else jump 3

    2:
      %5 = stackalloc 1
      store %5, %1
      store %1, %2
      %2 = %2 Add %5
      %3 = %3 Add 1
      jump 1

    3:
      return %1

  }

  // Function 1
  fn main {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 10
      %1 = call 0(%0)
      %2 = stackalloc 1
      store %2, %1
      return %2

  }

}
