crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__functions_return_values.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: return_values.cm
============================================================
Source code:
func foo(x: felt) -> (felt, felt){
    return (x, 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn foo {
    parameters: [0]
    entry: 0

    0:
      return (%0, 1)

  }

}
