crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__optimizations_zero_conditions.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: zero_conditions.cm
============================================================
Source code:
func zero_conditions(x: felt) -> felt {
    if (0 == x){
        return 1;
    }
    if (x != 0){
        return 2;
    }
    if (!x) {
        return 3;
    } else {
        return 4;
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn zero_conditions {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      if %0 then jump 3 else jump 4

    3:
      return 2

    4:
      if %0 then jump 6 else jump 5

    5:
      return 3

    6:
      return 4

  }

}
